<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="mainViewModel"
            type="com.instriker.wcre.presentation.MansionSettingsViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/listGroupTitleZone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/listGroupTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Mansion Settings"/>
        </LinearLayout>

        <LinearLayout
            style="@style/mainActivityLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mansionItemsPrompt"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/groupsPadding"
                        android:text="@{String.format(mainViewModel.itemsCount.isSingleValue ? @string/countExact : @string/countRange, mainViewModel.itemsCount.minValue, mainViewModel.itemsCount.maxValue)}"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>

                <Spinner
                    android:id="@+id/itemsQuickSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/mansionItemsPrompt"
                    bind:itemSource="@{mainViewModel.itemsCount.choices}"
                    bind:itemTemplate="@{@layout/simple_spinner_dropdown_item}"
                    bind:selectedPosition="@={mainViewModel.itemsCount.quickSettings}"
                    bind:spinnerTemplate="@{@layout/simple_spinner_item}" />


                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{mainViewModel.itemsCount.isCustom}">

                    <include
                        layout="@layout/inputrange"
                        bind:mainViewModel="@{mainViewModel.itemsCount}"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mansionTokensPrompt"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/groupsPadding"
                        android:text="@{String.format(mainViewModel.tokensCount.isSingleValue ? @string/countExact : @string/countRange, mainViewModel.tokensCount.minValue, mainViewModel.tokensCount.maxValue)}"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>

                <Spinner
                    android:id="@+id/tokensQuickSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/mansionTokensPrompt"
                    bind:itemSource="@{mainViewModel.tokensCount.choices}"
                    bind:itemTemplate="@{@layout/simple_spinner_dropdown_item}"
                    bind:selectedPosition="@={mainViewModel.tokensCount.quickSettings}"
                    bind:spinnerTemplate="@{@layout/simple_spinner_item}"/>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{mainViewModel.tokensCount.isCustom}">

                    <include
                        layout="@layout/inputrange"
                        bind:mainViewModel="@{mainViewModel.tokensCount}"/>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Events"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/groupsPadding"
                        android:text="@{String.format(mainViewModel.eventCount.isSingleValue ? @string/countExact : @string/countRange, mainViewModel.eventCount.minValue, mainViewModel.eventCount.maxValue)}"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>

                <Spinner
                    android:id="@+id/eventsQuickSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/eventsPrompt"
                    bind:itemSource="@{mainViewModel.eventCount.choices}"
                    bind:itemTemplate="@{@layout/simple_spinner_dropdown_item}"
                    bind:selectedPosition="@={mainViewModel.eventCount.quickSettings}"
                    bind:spinnerTemplate="@{@layout/simple_spinner_item}"/>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{mainViewModel.eventCount.isCustom}">

                    <include
                        layout="@layout/inputrange"
                        bind:mainViewModel="@{mainViewModel.eventCount}"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Non-Boss Infected"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/groupsPadding"
                        android:text="@{String.format(mainViewModel.infectedCount.isSingleValue ? @string/countExact : @string/countRange, mainViewModel.infectedCount.minValue, mainViewModel.infectedCount.maxValue)}"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>

                <Spinner
                    android:id="@+id/infectedQuickSettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/infectedPrompt"
                    bind:itemSource="@{mainViewModel.infectedCount.choices}"
                    bind:itemTemplate="@{@layout/simple_spinner_dropdown_item}"
                    bind:selectedPosition="@={mainViewModel.infectedCount.quickSettings}"
                    bind:spinnerTemplate="@{@layout/simple_spinner_item}"/>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{mainViewModel.infectedCount.isCustom}">

                    <include
                        layout="@layout/inputrange"
                        bind:mainViewModel="@{mainViewModel.infectedCount}"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Excluded cards"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/groupsPadding"
                        android:text="@{String.valueOf(mainViewModel.excludedCardsCount)}"/>
                </LinearLayout>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> mainViewModel.manageExcludedCards()}"
                    android:text="Choose excluded cards" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>